spanish transl and default realm pve for proxmox

--- a/template/email/default/admin/i18n/en.lang
+++ b/template/email/default/admin/i18n/en.lang
@@ -1,8 +1,9 @@
 {
     "ticket\/new.php": {
-        "Получен тикет": "",
-        "Получено новое обращение в службу поддержки № %ticket.": "",
-        "Тема: ": "",
-        "Сообщение: ": ""
+        "Получен тикет": "Received ticket",
+        "Получено новое обращение в службу поддержки № %ticket.": "Received a new support ticket # %ticket.",
+        "Тема: ": "Topic: ",
+        "Сообщение: ": "Message: ",
+        "Открыть тикет в биллинг системе": "Open ticket on system"
     }
 }
